--- a/tcc/Dockerfile
+++ b/tcc/Dockerfile
@@ -1,5 +1,14 @@
-FROM ubuntu:latest AS build
+# Use a imagem oficial do OpenJDK
+FROM openjdk:17-jdk-alpine
 
-RUN apt-get update
+# Defina o diretório de trabalho
+WORKDIR /app
 
-RUN apt-get install openjdk17-jdk -y
+# Copie o JAR da aplicação para o contêiner
+COPY target/*.jar /app/app.jar
+
+# Expõe a porta da aplicação (ajuste conforme necessário)
+EXPOSE 8080
+
+# Comando de entrada para iniciar a aplicação Spring Boot
+CMD ["java", "-jar", "/app/app.jar"]
