--- a/tcc/Dockerfile
+++ b/tcc/Dockerfile
@@ -1,13 +1,19 @@
+FROM ubuntu:latest AS build
 
-FROM openjdk:17-jdk-alpine
+RUN apt-get update
 
+RUN apt-get install openjdk-17-jdk -y
 
-WORKDIR /app
+COPY . .
 
+RUN apt-get install maven -y
 
-COPY target/*.jar /app/app.jar
+RUN mvn clean install
+
+FROM openjdk:17-jdk-slim
 
 EXPOSE 8080
 
+COPY --from=build /target/tcc-0.0.1-SNAPSHOT.jar app.jar
 
-CMD ["java", "-jar", "/app/app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
