--- a/tcc/Dockerfile
+++ b/tcc/Dockerfile
@@ -1,19 +1,13 @@
 FROM ubuntu:latest AS build
 
-RUN apt-get update
+RUN apt-get update \
+    && apt-get install openjdk-17-jdk -y \
+    && apt-get install maven -y
 
-RUN apt-get install openjdk-17-jdk -y
+WORKDIR /app
 
+# Copie todos os arquivos do projeto
 COPY . .
 
-RUN apt-get install maven -y
-
+# Execute o Maven para construir o projeto
 RUN mvn clean install
-
-FROM openjdk:17-jdk-slim
-
-EXPOSE 8080
-
-COPY --from=build /target/tcc-0.0.1-SNAPSHOT.jar app.jar
-
-ENTRYPOINT ["java", "-jar", "app.jar"]
