--- a/tcc/Dockerfile
+++ b/tcc/Dockerfile
@@ -1,13 +1,26 @@
-FROM ubuntu:latest AS build
-
-RUN apt-get update \
-    && apt-get install openjdk-17-jdk -y \
-    && apt-get install maven -y
+FROM maven:3.8.4-openjdk-17 AS build
 
 WORKDIR /app
 
-# Copie todos os arquivos do projeto
-COPY . .
+# Copie o arquivo pom.xml para o diretório atual
+COPY pom.xml .
+
+# Copie o restante do código-fonte
+COPY src ./src
 
 # Execute o Maven para construir o projeto
 RUN mvn clean install
+
+# Segunda etapa para a imagem final
+FROM openjdk:17-jdk-slim
+
+WORKDIR /app
+
+# Copie o JAR gerado na primeira etapa
+COPY --from=build /app/target/tcc-0.0.1-SNAPSHOT.jar app.jar
+
+# Exponha a porta da aplicação
+EXPOSE 8080
+
+# Comando de entrada para iniciar a aplicação Spring Boot
+CMD ["java", "-jar", "app.jar"]
