--- a/tcc/Dockerfile
+++ b/tcc/Dockerfile
@@ -1,29 +1,16 @@
-FROM maven:3.8.4-openjdk-17 AS build
+FROM ubuntu:latest AS build
 
-WORKDIR /app
+RUN apt-get update
+RUN apt-get install openjdk-17-jdk -y
+COPY . .
 
-# Copie o arquivo pom.xml para o diretório atual
-COPY pom.xml .
+RUN apt-get install maven -y
+RUN mvn clean install 
 
-# Crie a estrutura de diretórios para copiar os arquivos de origem
-RUN mkdir src
-
-# Copie o restante do código-fonte
-COPY src ./src
-
-# Execute o Maven para construir o projeto
-RUN mvn clean install
-
-# Segunda etapa para a imagem final
 FROM openjdk:17-jdk-slim
 
-WORKDIR /app
-
-# Copie o JAR gerado na primeira etapa
-COPY --from=build /app/target/tcc-0.0.1-SNAPSHOT.jar app.jar
-
-# Exponha a porta da aplicação
 EXPOSE 8080
 
-# Comando de entrada para iniciar a aplicação Spring Boot
-CMD ["java", "-jar", "app.jar"]
+COPY --from=build /target/deploy_render-1.0.0.jar app.jar
+
+ENTRYPOINT [ "java", "-jar", "app.jar" ]
