--- a/tcc/Dockerfile
+++ b/tcc/Dockerfile
@@ -1,25 +1,31 @@
-# Use a imagem oficial do OpenJDK para a fase de construção
+# Fase de construção
 FROM openjdk:17-jdk AS build
 
-# Crie o diretório de trabalho no contêiner
+# Definir o diretório de trabalho no contêiner
 WORKDIR /app
 
-# Copie todo o código-fonte para o contêiner
+# Copiar apenas o arquivo pom.xml para aproveitar o cache de dependências
+COPY pom.xml .
+
+# Baixar as dependências do Maven (se houver alterações no pom.xml)
+RUN ["./mvnw", "dependency:go-offline"]
+
+# Copiar o restante dos arquivos do projeto
 COPY . .
 
-# Construa o projeto com o Maven
-RUN ./mvnw clean install
+# Construir o projeto com o Maven
+RUN ["./mvnw", "clean", "install"]
 
-# Imagem final para a execução
+# Fase de execução
 FROM openjdk:17-jdk-slim
 
-# Defina o diretório de trabalho
+# Definir o diretório de trabalho
 WORKDIR /app
 
-# Copie o JAR construído da fase de construção para a imagem final
+# Copiar o JAR construído da fase de construção para a imagem final
 COPY --from=build /app/target/tcc-0.0.1-SNAPSHOT.jar app.jar
 
-# Expõe a porta da aplicação (ajuste conforme necessário)
+# Expor a porta da aplicação (ajustar conforme necessário)
 EXPOSE 8080
 
 # Comando de entrada para iniciar a aplicação Spring Boot
