--- a/tcc/src/main/resources/application.properties
+++ b/tcc/src/main/resources/application.properties
@@ -1,15 +1,12 @@
-spring.datasource.url=jdbc:postgresql://dpg-cmamftf109ks73fgksn0-a.oregon-postgres.render.com:5432/odin_5jnr
-spring.datasource.username=admin
-spring.datasource.password=uDekPcSigqxCdudPd3el34kMcRF6HnLI
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=ODIN;encrypt=false
 
-
-
-
+spring.datasource.username=sa
+spring.datasource.password=teste
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 
 
 
